# mpvjoc

./: .gitignore  CMakeLists.txt  README.md  combined_code.txt  main.cpp
.zed/: settings.json
build-release/: mpvjoc.unstripped
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release/mpvjoc_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-release/mpvjoc_autogen/ESJV3GIALR/: moc_PlaylistModel.cpp  moc_PlaylistModel.cpp.d
build-release/mpvjoc_autogen/HTGEZKIBRU/: moc_MetadataProbeManager.cpp  moc_MetadataProbeManager.cpp.d  moc_ThumbnailManager.cpp  moc_ThumbnailManager.cpp.d
build-release/mpvjoc_autogen/UYX5XTB5RZ/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
cmake/: Version.h.in
family/: FamilyDestinationRepository.cpp  FamilyDestinationRepository.h  FamilyFilenameParser.cpp  FamilyFilenameParser.h  FamilyMoveEvaluator.cpp  FamilyMoveEvaluator.h
media/: MetadataProbeManager.cpp  MetadataProbeManager.h  ThumbnailManager.cpp  ThumbnailManager.h
mpv/: MpvWidget.cpp  MpvWidget.h  PlaybackOverlayWidget.cpp  PlaybackOverlayWidget.h
playlist/: PlaylistBadges.cpp  PlaylistBadges.h  PlaylistDelegate.cpp  PlaylistDelegate.h  PlaylistDurationRuns.cpp  PlaylistDurationRuns.h  PlaylistFilterProxyModel.cpp  PlaylistFilterProxyModel.h  PlaylistFormatting.cpp  PlaylistFormatting.h  PlaylistModel.cpp  PlaylistModel.h
tools/: README.md  audit_shortcut_help.py  install_desktop_icon.sh  verify_shortcut_help.sh
ui/: MainWindow.cpp  MainWindow.h  MainWindowDrops.cpp  MainWindowFileActions.cpp  MainWindowMedia.cpp  MainWindowMove.cpp  MainWindowPlayback.cpp  MainWindowPlaylist.cpp  MainWindowPlaylists.cpp  MainWindowShortcuts.cpp  MainWindowState.cpp  MainWindowUi.cpp  PlaylistTabRenameController.cpp  PlaylistTabRenameController.h  PlaylistTabWidget.cpp  PlaylistTabWidget.h  PlaylistWorkspace.cpp  PlaylistWorkspace.h  TimelineWidget.cpp  TimelineWidget.h
util/: TextHighlighting.cpp  TextHighlighting.h  Utils.cpp  Utils.h
